--- a/Exp/kernel/rocm_dot_add.template
+++ b/Exp/kernel/rocm_dot_add.template
@@ -4,12 +4,12 @@ __global__ void MatrixMultiply(float *input0, float *input1, float *input2, floa
     int ty = threadIdx.y;
     int tx = threadIdx.x;
 
-    const int BLOCK_SIZE_M = 64;
-    const int BLOCK_SIZE_K = 8;
-    const int BLOCK_SIZE_N = 128;
-    const int THREAD_SIZE_M = 8;
-    const int THREAD_SIZE_K = 4;
-    const int THREAD_SIZE_N = 8;
+    const int BLOCK_SIZE_M = BLOCK_SIZE_M_VALUE;
+    const int BLOCK_SIZE_K = BLOCK_SIZE_K_VALUE;
+    const int BLOCK_SIZE_N = BLOCK_SIZE_N_VALUE;
+    const int THREAD_SIZE_M = THREAD_SIZE_M_VALUE;
+    const int THREAD_SIZE_K = THREAD_SIZE_K_VALUE;
+    const int THREAD_SIZE_N = THREAD_SIZE_N_VALUE;
 
 
     const int M = M_VALUE;
