fused conv depthconv

--- a/src/nnfusion/core/operators/CMakeLists.txt
+++ b/src/nnfusion/core/operators/CMakeLists.txt
@@ -31,6 +31,8 @@ set(SRC
     op_define/constant.cpp
     op_define/convert.cpp
     op_define/convolution.cpp
+    op_define/fused_convolution.cpp
+    op_define/fused_depthwise.cpp
     op_define/cos.cpp
     op_define/cosh.cpp
     op_define/divide.cpp
